docs: update index file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
-Hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>cv</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header class = "header">
+        <div class="container">
+            <nav class="nav">
+                <ul class="nav-list">
+                  <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                  <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
+                  <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                  <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
+                  <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+                  <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
+                </ul>
+              </nav>
+        </div>
+    </header>
+    <main class = "main">
+        <div class="container main-container">
+            <section class="section section-profile" id="profile">
+                <img class="avatar" src="img/avatar.jpg" alt="avatar Andey Gvozd">
+                <div class="name-position">
+                    <h1 class="section-title">Gvozd Andrey</h1>
+                </div>
+            </section>
+            <section class="section section-contacts" id="contacts">
+                <h2 class="section-title">Contacts</h2>
+                <p>Donetsk</p>
+                <p><span class="type-of-contact">Phone:</span>+38050368xxxx</p>
+                <p><span class="type-of-contact">Email:</span>elecon@ukr.net</p>
+                <p><span class="type-of-contact">Github:</span><a href="https://github.com/AndreyDn2021" class="contact-link">AndreyDn2021</a></p>
+            </section>
+            <section class="section" id="summary">
+                <h2 class="section-title">Summary</h2>
+                <p class="summary">I want to learn something new and possibly change my profession.</p>
+            </section>
+            <section class="section" id="skills">
+                <h2 class="section-title">Skills</h2>
+                <p>Basic knowledge of HTML and CSS</p>
+            </section>
+            <section class="section" id="code">
+                <h2 class="section-title">Code</h2>
+                <pre>
+<code>body {
+        font-size: 48px;
+      }
+      div:nth-child(1) {
+        font-family: 'Crimson Pro', serif;
+      }</code></pre>
+            </section>
+            <section class="section section-education" id="education">
+                <h2 class="section-title">Education</h2>
+                <p>Donetsk National Technical University</p>
+            </section>
+            <section class="section section-languages" id="languages">
+                <h2 class="section-title">Languages</h2>
+                <ul>
+                    <li class="main-li"><span>Russian and Ukrainian native</span></li>
+                    <li class="main-li"><span>English basic</span></li>
+                </ul>
+            </section>
+        </div>
+    </main>
+    <footer class = "footer">
+        <div class="container footer-container">
+            <p>2022</p>
+            <a href="https://github.com/AndreyDn2021" class="github-link">AndreyDn2021</a>
+            <a href="https://rs.school/js"><img class="footer-logo" src="img/rs_school_js.svg" alt="logo of course"></a>
+        </div>
+    </footer>
+</body>
+</html>
